# mumei

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build_and_run.sh  grammar.pest  instruction.md  mcp_server.py  self_healing.py  sword_test.mm  test_sum.mm
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  EXAMPLES.md  LANGUAGE.md  STDLIB.md  TOOLCHAIN.md
editors/vscode/: language-configuration.json  package.json
editors/vscode/src/: extension.ts
examples/: call_test.mm  match_atm.mm  match_evaluator.mm
examples/import_test/: main.mm
examples/import_test/lib/: math_utils.mm
src/: .env.local  ast.rs  codegen.rs  lsp.rs  main.rs  manifest.rs  parser.rs  registry.rs  resolver.rs  setup.rs  transpiler.rs  verification.rs
src/transpiler/: golang.rs  mod.rs  rust.rs  typescript.rs
std/: alloc.mm  list.mm  option.mm  prelude.mm  result.mm  stack.mm
std/container/: bounded_array.mm
tests/: test_forall_ensures.mm  test_std_import.mm
tests/negative/: array_oob.mm  consume_ref_conflict.mm  division_by_zero.mm  forall_ensures_fail.mm  invariant_fail.mm  match_non_exhaustive.mm  postcondition_fail.mm  requires_not_met.mm  termination_fail.mm
visualizer/: app.py
